# nothing

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  README.md  README.scratch.md  pyproject.toml  sample.yml  tox.ini  verify.py
not/: config.py  constants.py  filesystem.py  main.py  models.py  parser_.py  reader.py  runner.py  theatrics.py  utils.py  writer.py
not/localization/: __init__.py  constants.py  en.json
not/tests/: conftest.py  test_filesystem.py  test_models.py  test_reader.py  test_theatrics.py  test_utils.py  test_writer.py
nothing_cli/: __init__.py  completions.py  config.py  constants.py  filesystem.py  main.py  models.py  subcommand_shared.py  theatrics.py  writer.py
nothing_cli/localization/: __init__.py  constants.py  en.json
nothing_cli/tests/: conftest.py  test_filesystem.py  test_models.py  test_theatrics.py  test_writer.py
nothing_cli/tests/test_filesystem/: conftest.py  test_collect_fancy_list_input.py  test_deserialize_procedure_file.py  test_friendly_prefix_for_path.py  test_path_to_write_to.py  test_procedure_location.py  test_procedure_object_metadata.py  test_state.py
nothing_cli/tests/test_main/: conftest.py  test_do.py  test_drop.py  test_edit.py  test_info.py  test_init.py  test_ls.py  test_new.py
