[tool.poetry]
name = "not"
version = "0.1.0"
description = "Nothing helps coder be more smarter & less dumber."
authors = ["Ainsley McGrath <mcgrath.ainsley@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
not = "src.main:app"

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.3"
typer = "^0.1.0"
pyaml = "^20.3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
